# vulkan-triangle

./: CMakeLists.txt  README.md  main.cpp  shader.vert
graphics/: CMakeLists.txt  application.cpp  application.h  debugcallbacks.h  helperfunctions.h  vertex.cpp  vertex.h
graphics/window/: CMakeLists.txt  window.cpp  window.h
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
